<resources>
    <string name="app_name">Covid\nSafe</string>
    <string name="main_header_text">Covid\nSafe</string>
    <string name="app_name_one_line">CovidSafe</string>
    <string name="history_header_text">History</string>
    <string name="permissions_header_text"><![CDATA[<font color=#000000>Select your preferences</font>]]></string>
    <string name="health_header_text"><![CDATA[<font color=#000000>Health</font>]]></string>
    <string name="health_header_text_demo"><![CDATA[<font color=#000000>Health [DEMO]</font>]]></string>
    <string name="contact_header_text"><![CDATA[<font color=#000000>Interview Preparation</font>]]></string>
    <string name="contact_header_text_demo"><![CDATA[<font color=#000000>Interview Preparation [DEMO]</font>]]></string>
    <string name="add_symptoms_header_text"><![CDATA[<font color=#000000>Create New Log</font>]]></string>
    <string name="settings_header_text"><![CDATA[<font color=#000000>Settings</font>]]></string>
    <string name="help_header_text"><![CDATA[<font color=#000000>Resources</font>]]></string>
    <string name="help_header_text_demo"><![CDATA[<font color=#000000>Resources [DEMO]</font>]]></string>
    <string name="contact_log_header_text"><![CDATA[<font color=#000000>Contact Log</font>]]></string>
    <string name="contact_log_header_text_demo"><![CDATA[<font color=#000000>Contact Log [DEMO]</font>]]></string>
    <string name="warning_header_text"><![CDATA[<font color=#000000>Diagnosis Report</font>]]></string>
    <string name="symptom_help_text">Use this form to provide a daily report of any symptoms you have. You may submit this form once a day.</string>
    <string name="warning_help_text">You\'ve received a positive diagnosis from your healthcare provider. To confirm your diagnosis, please provider your credentials below.</string>
    <string name="settings_help_text">You can use this panel to create a 1 mile radius around locations you don\'t want to be tracked. You can add up to %1$d locations.</string>
    <string name="notif_message">We are currently logging your location.</string>
    <string name="default_exposed_notif">Based on your location history, we believe you might have been in the same place as people infected with COVID-19.</string>
    <string name="exposed_notif2">Please contact your healthcare professional.</string>
    <string name="select_contact">Select Contacts</string>
    <string name="warning">Warning</string>
    <string name="logging_now_off">Logging is now turned off.</string>
    <string name="inter_prep">Interview Preparation</string>
    <string name="email_subject">CovidSafe Contact Tracer Interview Information Packet</string>
    <string name="symptom_logs">Symptom logs</string>
    <string name="location_logs">Location logs</string>
    <string name="contact_logs">Contact logs</string>
    <string name="send_email">Send email</string>
    <string name="contact_title_1">
        Review which symptoms you would like to include.
    </string>
    <string name="contact_title_2">
        Review your location history from the last 14 days.
    </string>
    <string name="contact_title_3">
        Review the people you’ve been in contact with recently.
    </string>
    <string name="contact_title_4">
        Save this list for reference during your interview.
    </string>
    <string name="contact_desc_1">
        We’ve detected severe symptoms in your recent reports, and collected them below.
    </string>
    <string name="contact_desc_2">
        Below are locations you’ve recently visited for 10 minutes or more. This helps us track locations that might be high-risk for exposure.
    </string>
    <string name="contact_desc_3">
        Below you can add a list of people you’ve been in close contact with (6m) for 10 or more minutes in the last 14 days.
    </string>
    <string name="contact_desc_4">
        Don’t worry, you can always come back to edit this list later. You can export this information into an email record for yourself.
    </string>
    <string name="q1">
        What is the purpose of this app?
    </string>
    <string name="a1">
        CovidSafe is an app that seeks to reduce the spread of coronavirus in the community, specifically by helping people learn if they\'ve been exposed, connecting them to the appropriate public health guidance, and by enabling effective contact tracing. CovidSafe also reduces the burden on public health systems by offering people who have been positively diagnosed and their potential exposures, a safe, private, and fast way to communicate this information to the people who need it — public health authorities and their contact tracing teams.
    </string>
    <string name="q2">
        How does this app benefit me?
    </string>
    <string name="a2">
        CovidSafe offers several features to protect both you and your community:\n
        •	Get notified about possible exposure. You may be notified if someone who was near you within the last two weeks has come down with symptoms of COVID-19. The measure of \‘near\’ is not as precise as the medical definition (within 6 feet for more than 10 minutes), but it is accurate up to a few meters.\n
        •	Track your symptoms. The symptoms you track may be useful to assist public health teams if you are confirmed positive, and for having this information readily available if you are exposed and called for a contact tracing interview. You can also get reliable, vetted information about SARS-CoV-2, why it\'s so dangerous, and how it spreads.
    </string>
    <string name="q3">
        Who can use CovidSafe?
    </string>
    <string name="a3">
        When it becomes available for use, CovidSafe is free, and anyone can use it.
    </string>
    <string name="q4">
        Who else benefits from my participation with this app?
    </string>
    <string name="a4">
        CovidSafe is capable of alerting people who have been in areas where coronavirus is active. If you test positive for coronavirus, you\'ll also be able to anonymously notify others you may have been in contact with over the past two weeks to alert them that they may have been exposed, and to prepare them for potential contact tracing interviews.
    </string>
    <string name="q5">
        How does CovidSafe help public health officials?
    </string>
    <string name="a5">
        Traditional contact tracing interviews done by public health services are important, laborious, complicated and can sometimes omit important contacts because patients forget to mention them. CovidSafe helps people who have tested positive remember locations they’ve visited recently, by providing an objective log, which they can then share with contact tracing teams. There is also functionality to organize the contact information of known contacts, which streamlines the interview process and enables contact tracers to work faster.
    </string>
    <string name="pq1">
        If I test positive and I disclose it via CovidSafe, what information is revealed to others?
    </string>
    <string name="pa1">
        Other people with the application, who have been exposed may be notified, along with the time the exposure occurred. No other information will be revealed.
    </string>
    <string name="pq2">
        If I test negative, can a malicious person get access to my phone’s broadcasts and report me as being positive?
    </string>
    <string name="pa2">
        No, this isn’t possible. The app is encrypted to prevent it from happening using similar security technology used for other purposes, such as online banking.
    </string>
    <string name="pq3">
        If someone else obtains data used to alert people who have been exposed, what can they learn?
    </string>
    <string name="pa3">
        They\'ll see a sequence of random identifiers that have been broadcast over time near people who have tested positive for coronavirus. They could assume the location of the person who tested positive if the random identifiers were collected at specific locations. Otherwise, the person remains anonymous. The security of the system relies on the fact this data can be made public without compromising privacy.
    </string>
    <string name="pq4">
        If I receive a message that I have been exposed, what is disclosed to the public?
    </string>
    <string name="pa4">
        Nothing about your identity will be disclosed to the public.
    </string>
    <string name="pq5">
        Can the identity of a person who chooses to report they’ve tested positive be guessed by others?
    </string>
    <string name="tip_desc_1">
        Everyone with COVID-19 symptoms (fever, cough, and/or difficulty breathing) who has a test result pending, shall stay in an quarantine location (your home if you have one or in a government directed or publicly provided location if one is available) in accordance with CDC and Public Health guidance.\n\n
        If your test result is positive, you must then remain in isolation.
    </string>
    <string name="fever_txt">Fever</string>
    <string name="cough_txt">Cough</string>
    <string name="shortness_of_breath_txt">Shortness of breath</string>
    <string name="trouble_breathing_txt">Trouble breathing</string>
    <string name="persistent_pain_or_pressure_in_chest">Persistent pain or pressure in the chest</string>
    <string name="new_confusion_inability_to_arouse">New confusion or inability to arouse</string>
    <string name="bluish_lips_or_face">Bluish lips or face</string>
    <string name="certText">I certify that the information submitted in this report is true and correct to the best of my knowledge.</string>
    <string name="bottom_sheet_menu_item_home" comment="This is the bottom menu item called as home">Home</string>
    <string name="bottom_sheet_menu_item_contact_log" comment="This is the bottom menu item called as contact log">Contact Log</string>
    <string name="bottom_sheet_menu_item_health_report" comment="This is the bottom menu item called as health report">Health Report</string>
    <string name="bottom_sheet_menu_item_resources" comment="This is the bottom menu item called as resources">Resources</string>
    <string name="self_quarantine_for_14_days">Self-quarantine For 14 Days</string>
    <string name="learn_more_link_text" comment="This is a button link which when clicked will take the user to the online resources">Learn More</string>
    <string name="how_to_prepare_for_your_interview">How to prepare for your interview</string>
    <string name="interview_preparation_description_text">During your interview, a healthcare nurse will be collecting a list of critical information to help identify those who may have been exposed.
You can prepare a list of informaton they will ask about based on information collected through CovidSafe. This information includes:</string>
    <string name="symptoms_experienced_last_14_days">Symptoms you’ve experienced in the last 14 days</string>
    <string name="location_visited_in_last_14_days">Locations you’ve visited in the last 14 days</string>
    <string name="people_you_have_been_in_contact_last_14_days">People you’ve been in direct contact with over the last 14 days</string>
    <string name="get_started_text">Get started</string>
    <string name="help_your_community_by_reporting">Help your community by reporting your diagnosis</string>
    <string name="your_report_will_be_anonymous_text">Your report will be anonymous and your identity will be protected</string>
    <string name="new_report_text">New Report</string>
</resources>