<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/symptom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fever_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomHelpText" />

    <CheckBox
        android:id="@+id/symptom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cough_txt"
        app:layout_constraintStart_toStartOf="@+id/symptom1"
        app:layout_constraintTop_toBottomOf="@+id/symptom1" />

    <CheckBox
        android:id="@+id/symptom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortness_of_breath_txt"
        app:layout_constraintStart_toStartOf="@+id/symptom2"
        app:layout_constraintTop_toBottomOf="@+id/symptom2" />

    <CheckBox
        android:id="@+id/symptom5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persistent_pain_or_pressure_in_chest"
        app:layout_constraintStart_toStartOf="@+id/symptom4"
        app:layout_constraintTop_toBottomOf="@+id/symptom4" />

    <CheckBox
        android:id="@+id/symptom6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_confusion_inability_to_arouse"
        app:layout_constraintStart_toStartOf="@+id/symptom5"
        app:layout_constraintTop_toBottomOf="@+id/symptom5" />

    <CheckBox
        android:id="@+id/symptom7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluish_lips_or_face"
        app:layout_constraintStart_toStartOf="@+id/symptom6"
        app:layout_constraintTop_toBottomOf="@+id/symptom6" />

    <CheckBox
        android:id="@+id/symptom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trouble_breathing_txt"
        app:layout_constraintStart_toStartOf="@+id/symptom3"
        app:layout_constraintTop_toBottomOf="@+id/symptom3" />

    <TextView
        android:id="@+id/symptomHelpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/symptom_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".30"
        android:backgroundTint="@color/gray"
        android:text="Clear all"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV5"
        app:layout_constraintRight_toRightOf="@id/guidelineV48"
        app:layout_constraintTop_toBottomOf="@+id/certBoxReport" />

    <Button
        android:id="@+id/submitForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".0"
        android:text="Submit"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV95"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineV52"
        app:layout_constraintTop_toBottomOf="@+id/certBoxReport" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="226dp"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />

    <CheckBox
        android:id="@+id/certBoxReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/certText"
        app:layout_constraintBottom_toTopOf="@+id/submitForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom7" />

</androidx.constraintlayout.widget.ConstraintLayout>