<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/speech"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/how_to_prepare_for_your_interview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/interview_preparation_description_text"
            android:textColor="@color/gray7"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_symptoms"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

        <TextView
            android:id="@+id/desc1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/symptoms_experienced_last_14_days"
            app:layout_constraintBottom_toBottomOf="@+id/img1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toTopOf="@+id/img1" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/map"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@+id/img1" />

        <TextView
            android:id="@+id/desc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/location_visited_in_last_14_days"
            app:layout_constraintBottom_toBottomOf="@+id/img2"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toTopOf="@+id/img2" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/people"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@+id/img2" />

        <TextView
            android:id="@+id/desc3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/people_you_have_been_in_contact_last_14_days"
            app:layout_constraintBottom_toBottomOf="@+id/img3"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toTopOf="@+id/img3" />

        <Button
            android:id="@+id/submitForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight=".0"
            android:text="@string/get_started_text"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@+id/desc3" />

        <include
            android:id="@+id/disclaimer"
            layout="@layout/card_privacy_disclaimer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineV9"
            app:layout_constraintStart_toStartOf="@+id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/submitForm" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1"
            app:layout_constraintGuide_begin="20dp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9"
            app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>