<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/report"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV70"
        app:layout_constraintStart_toStartOf="@+id/guidelineV30"
        app:layout_constraintTop_toTopOf="@+id/guidelineH30" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/help_your_community_by_reporting"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV85"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineV15"
        app:layout_constraintTop_toTopOf="@+id/guidelineH50" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/your_report_will_be_anonymous_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV85"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineV15"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_report_text"
        app:icon="@drawable/ic_add_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV70"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guidelineV30"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>