<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout2"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent=".05" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV95"
        app:layout_constraintStart_toStartOf="@+id/guidelineV05"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_quarantine"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:text="@string/self_quarantine_for_14_days"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/guidelineV85"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="00dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:text="@string/tip_desc_1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <Button
                android:id="@+id/whatHappens"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:backgroundTint="@color/white"
                android:text="@string/learn_more_link_text"
                android:textColor="@color/purpleLight"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineV10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent=".15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineV85"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent=".85" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>